--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             :root {
                 --color-bg: #121212;
                 --color-text-primary: #e0e0e0;
-                --color-text-secondary: #aaaaaa;
+                --color-text-secondary: #bbbbbb;
                 --color-accent: #ff5252; /* 革命的な赤 */
                 --color-border: #333333;
                 --font-main: "Helvetica Neue", Arial, sans-serif;
@@ -132,7 +132,7 @@
             /* 批判のセクションを強調 */
             .critique-section {
                 padding: 20px;
-                border: 1px solid var(--color-border);
+                border: 2px solid var(--color-border);
                 margin-bottom: 30px;
             }
 
