--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </p>
                 </div>
                 <div class="critique-section">
-                    <h3>暗号アナキズムへの批判</h3>
+                    <h3>暗号アナキズム / 加速主義への批判</h3>
                     <p>
                         右派的・市場原理主義的であり、技術を革命の武器としてしか見ていない。ただし、その匿名性は近代的な「主体」そのものを脱構築する可能性を持つ。
                     </p>
@@ -221,7 +221,7 @@
                 <ul>
                     <li>
                         <strong>疎外の克服：</strong
-                        >企業の労務管理ソフト、デジタル教育、検閲やフィルタリングなど、人間を支配する疎外形態（スペクタクル、ゲシュテル）を無力化する。
+                        >労務管理ソフト、デジタル教育、検閲やフィルタリングなど、人間を支配するゲシュテルを粉砕する。
                     </li>
                     <li>
                         <strong>技術の非職能化：</strong
@@ -229,7 +229,7 @@
                     </li>
                     <li>
                         <strong>代替システムの開発：</strong
-                        >人間の自由な生を肯定する「存在の開示」として、分散型SNSなど、自由な社会システムとしての代替ソフトウェアを開発する。
+                        >分散型SNSなど、自由な社会システムとしての代替ソフトウェアを開発する。
                     </li>
                 </ul>
 
@@ -237,8 +237,9 @@
             </section>
 
             <footer>
-                <p>2025年11月30日 秋井乃音斗 前衛技術同盟</p>
-                <p>技術を、道具から存在の開示へ。</p>
+                <p>
+                    (a) Anti-Copyrights 2025, 前衛技術同盟. All resources shared
+                </p>
             </footer>
         </div>
     </body>
