--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="influence-item">
                         <h3>シチュアシオニスト</h3>
                         <p>
-                            管理社会批判。企業労務管理やデジタル教育が織りなすスペクタクルを打破し、アナキスト的存在様式としての<strong>状況の構築</strong>を目指す。
+                            スペクタクル社会への批判。商品資本主義のSNSやメディアが織りなすスペクタクルを打破し、アナキスト的存在様式として技術の<strong>状況の構築</strong>を目指す。
                         </p>
                     </div>
                     <div class="influence-item">
