--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     >技術は単なる道具ではなく、我々の<strong>存在そのものの媒体</strong>であり、その在り方を強く規定する。出勤管理やタイムカードの規律権力を見よ。技術は常に、既存の権力関係を再生産する。
                 </p>
                 <p>
-                    我々は、人間を管理可能な資源として強制的に配置するゲシュテル（総駆り立て体制）から技術を解放し、人間の自由な生を存在論的に肯定する開蔵としての<strong>ポイエーシス</strong>へと転倒させることを目指す。
+                    我々は、人間を管理可能な資源として強制的に配置する<strong>ゲシュテル</strong>（総駆り立て体制）から技術を解放し、人間の自由な生を存在論的に肯定する開蔵としての<strong>ポイエーシス</strong>へと転倒させることを目指す。
                 </p>
 
                 <h2>I. 影響を受けた思想と運動</h2>
