--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
                         >労務管理ソフト、デジタル教育、検閲やフィルタリングなど、人間を支配するゲシュテルを粉砕する。
                     </li>
                     <li>
-                        <strong>技術の非職能化：</strong
-                        >技術独占とテクノクラシーを克服するため、技術を非職能化し、日常生活との一体化を推進する。
+                        <strong>代替システムの開発：</strong
+                        >分散型SNSやプログラミング言語など、アナキスト社会の基盤になるソフトウェアを開発する。
                     </li>
                     <li>
-                        <strong>代替システムの開発：</strong
-                        >分散型SNSなど、自由な社会システムとしての代替ソフトウェアを開発する。
+                        <strong>技術の非職能化：</strong
+                        >技術独占とテクノクラシーを克服するため、技術を非専門化し、日常生活との一体化を推進する。
                     </li>
                 </ul>
 
