--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
                 <div class="critique-section">
                     <h3>自由ソフトウェア / オープンソースへの批判</h3>
                     <p>
-                        資本主義を打倒するのではなく、補完的な技術愛好文化に留まっている。しかし、ハッカー精神や自由と協働のコミュニティ文化はリスペクトする。
+                        資本主義を打倒するのではなく、補完的な技術愛好文化に留まっており、スペクタクル商品社会に回収されている。しかし、ハッカー精神や自由と協働を重んじるコミュニティ文化は尊敬する。
                     </p>
                 </div>
                 <div class="critique-section">
                     <h3>暗号アナキズム / 加速主義への批判</h3>
                     <p>
-                        右派的・市場原理主義的であり、技術を革命の武器としてしか見ていない。ただし、その匿名性は近代的な「主体」そのものを脱構築する可能性を持つ。
+                        右派的・市場原理主義的であり、存在論的な分析を持たず、技術を単に革命の武器としてしか見ていない。ただし、その匿名性は近代的主体そのものを脱構築する可能性を持つ点を評価する。
                     </p>
                 </div>
 
