--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
             /* スローガンとフッター */
             .slogan {
+                text-shadow: black 1px 1px 1px;
                 background-color: var(--color-accent);
                 color: var(--color-main);
                 padding: 25px;
