--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>前衛技術同盟 (Bund der Avantgarde-Technologen)</title>
+        <title>前衛技術同盟 | エンジニアの廃止こそ技術の実現である</title>
         <style>
             @font-face {
                 font-family: "GevaFont";
