--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 --color-bg: #121212;
                 --color-text-primary: #e0e0e0;
                 --color-text-secondary: #bbbbbb;
-                --color-accent: #ff3030; /* 革命的な赤 */
+                --color-accent: #ff3030;
                 --color-border: #333333;
                 --font-geva: "GevaFont";
                 --font-main: "Hiragino Maru Gothic Pro";
@@ -31,14 +31,12 @@
                 line-height: 1.7;
             }
 
-            /* コンテナとレイアウト */
             .container {
                 max-width: 900px;
                 margin: 0 auto;
                 padding: 40px 20px;
             }
 
-            /* ヘッダーとタイトル */
             header {
                 border-bottom: 2px solid var(--color-accent);
                 padding-bottom: 20px;
@@ -64,7 +62,6 @@
                 font-weight: 300;
             }
 
-            /* セクションタイトル */
             h2 {
                 font-size: 1.8em;
                 color: var(--color-accent);
@@ -75,7 +72,6 @@
                 font-weight: 500;
             }
 
-            /* マニフェスト本文 */
             p {
                 margin-bottom: 20px;
                 font-size: 1.05em;
@@ -86,7 +82,6 @@
                 font-weight: 700;
             }
 
-            /* 思想/運動リスト */
             .influences {
                 display: flex;
                 flex-wrap: wrap;
@@ -116,7 +111,6 @@
                 color: var(--color-text-secondary);
             }
 
-            /* スローガンとフッター */
             .slogan {
                 text-shadow: black 2px 3px 0px;
                 background-color: var(--color-accent);
@@ -139,7 +133,6 @@
                 color: var(--color-text-secondary);
             }
 
-            /* 批判のセクションを強調 */
             .critique-section {
                 padding: 20px;
                 border: 2px solid var(--color-border);
