--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <meta property="og:title" content="前衛技術同盟" />
+        <meta
+            property="og:description"
+            content="エンジニアの廃止こそ技術の実現である"
+        />
+        <meta
+            property="og:image"
+            content="https://images.uncyc.org/commons/3/3c/Adolfgates.jpg"
+        />
+        <meta property="og:url" content="https://avant-garde-tech.github.io/" />
+
+        <meta name="twitter:title" content="前衛技術同盟" />
+        <meta
+            name="twitter:description"
+            content="エンジニアの廃止こそ技術の実現である"
+        />
+        <meta
+            name="twitter:image"
+            content="https://images.uncyc.org/commons/3/3c/Adolfgates.jpg"
+        />
+
+        <meta property="og:type" content="website" />
+
         <title>前衛技術同盟 | エンジニアの廃止こそ技術の実現である</title>
         <style>
             @font-face {
