--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <meta property="og:url" content="https://avant-garde-tech.github.io/" />
         <meta property="og:type" content="website" />
 
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="前衛技術同盟" />
         <meta
             name="twitter:description"
