--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
         <title>前衛技術同盟 | エンジニアの廃止こそ技術の実現である</title>
         <style>
             @font-face {
-                font-family: "GevaFont";
-                src: url("851Gkktt_005.ttf") format("truetype");
+                font-family: "Gewalt Font";
+                src: url("fonts/851Gkktt_005.ttf") format("truetype");
+                font-weight: normal;
+                font-style: normal;
+            }
+
+            @font-face {
+                font-family: "M Plus";
+                src: url("fonts/MPLUSRounded1c-Regular.ttf") format("truetype");
                 font-weight: normal;
                 font-style: normal;
             }
@@ -42,8 +49,8 @@
                 --color-text-secondary: #bbbbbb;
                 --color-accent: #ff3030;
                 --color-border: #333333;
-                --font-geva: "GevaFont";
-                --font-main: "Hiragino Maru Gothic Pro";
+                --font-gewalt: "Gewalt Font";
+                --font-main: "M Plus";
             }
 
             body {
@@ -68,7 +75,7 @@
             }
 
             h1 {
-                font-family: var(--font-geva);
+                font-family: var(--font-gewalt);
                 font-size: 5em;
                 padding: 0;
                 margin: 0;
@@ -78,7 +85,7 @@
             }
 
             .subtitle {
-                font-family: var(--font-geva);
+                font-family: var(--font-gewalt);
                 font-size: 1.5em;
                 color: var(--color-accent);
                 margin-top: -20px;
@@ -130,21 +137,20 @@
             }
 
             .influence-item p {
-                font-size: 0.95em;
                 line-height: 1.5;
                 color: var(--color-text-secondary);
             }
 
             .slogan {
-                text-shadow: black 2px 3px 0px;
+                text-shadow: black 3px 3px 0px;
                 background-color: var(--color-accent);
                 color: var(--color-main);
-                padding: 25px;
+                padding: 30px;
                 text-align: center;
-                font-size: 2.5em;
-                font-family: var(--font-geva);
+                font-size: 2em;
+                font-family: var(--font-gewalt);
                 margin-top: 60px;
-                margin-bottom: 60px;
+                margin-bottom: 0;
                 letter-spacing: 1px;
                 font-weight: 700;
             }
@@ -200,7 +206,7 @@
                     我々は、人間を管理可能な資源として強制的に配置する<strong>ゲシュテル</strong>（総駆り立て体制）から技術を解放し、人間の自由な生を存在論的に肯定する開蔵としての<strong>ポイエーシス</strong>へと転倒させることを目指す。
                 </p>
 
-                <h2>I. 影響を受けた思想と運動</h2>
+                <h2>1. 影響を受けた思想と運動</h2>
                 <div class="influences">
                     <div class="influence-item">
                         <h3>ヘーゲル左派 / 疎外論</h3>
@@ -224,7 +230,7 @@
                     </div>
                 </div>
 
-                <h2>II. 既存の技術運動への批判</h2>
+                <h2>2. 既存の技術運動への批判</h2>
                 <div class="critique-section">
                     <h3>自由ソフトウェア / オープンソースへの批判</h3>
                     <p>
@@ -238,7 +244,7 @@
                     </p>
                 </div>
 
-                <h2>III. 我々の目指すものと道筋</h2>
+                <h2>3. 我々の目指すものと道筋</h2>
                 <p>
                     我々は、技術を革命の手段にするのではなく、<strong
                         >技術そのものを革命する。</strong
@@ -261,6 +267,7 @@
                 </ul>
 
                 <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
+                <p>ーギー・ドゥボールの革命スローガンの転用</p>
             </section>
 
             <footer>
