--- a/index.html
+++ b/index.html
@@ -126,19 +126,17 @@
                 flex: 1 1 calc(33% - 20px);
                 min-width: 250px;
                 border-left: 2px solid var(--color-accent);
-            }
-
-            .influence-item h3 {
-                margin-top: 0;
-                font-size: 1.2em;
-                color: var(--color-accent);
-                border-bottom: 1px dashed var(--color-border);
-                padding-bottom: 5px;
-            }
-
-            .influence-item p {
-                line-height: 1.5;
-                color: var(--color-text-secondary);
+                h3 {
+                    margin-top: 0;
+                    font-size: 1.2em;
+                    color: var(--color-accent);
+                    border-bottom: 1px dashed var(--color-border);
+                    padding-bottom: 5px;
+                }
+                p {
+                    line-height: 1.5;
+                    color: var(--color-text-secondary);
+                }
             }
 
             .slogan {
@@ -167,26 +165,24 @@
                 padding: 20px;
                 border: 2px solid var(--color-border);
                 margin-bottom: 30px;
+                h3 {
+                    color: var(--color-accent);
+                    margin-top: 0;
+                    font-size: 1.3em;
+                }
+
+                p {
+                    margin-bottom: 10px;
+                }
             }
 
-            .critique-section h3 {
-                color: var(--color-accent);
-                margin-top: 0;
-                font-size: 1.3em;
-            }
-
-            .critique-section p {
-                margin-bottom: 10px;
-            }
-
-            .critique-section ul {
-                list-style-type: "— ";
-                padding-left: 20px;
-                margin-top: 10px;
-            }
-
-            .critique-section ul li {
-                margin-bottom: 5px;
+            ul {
+                padding: 20px;
+                padding-top: 0;
+                li {
+                    padding-left: 0;
+                    margin-bottom: 5px;
+                }
             }
         </style>
     </head>
@@ -211,8 +207,8 @@
                     <div class="influence-item">
                         <h3>ヘーゲル左派 / 疎外論</h3>
                         <p>
-                            フォイエルバッハの疎外論の転用。<strong>人間が作ったはずの技術が人間を支配する</strong>、という疎外形態を告発する。
-                            キリスト教と類似した構造が技術楽観主義に見られる。
+                            フォイエルバッハの疎外論の適用。<strong>人間が作ったはずの技術が人間を支配する</strong>、という疎外形態を告発する。
+                            キリスト教と類似した構造が見られる。
                         </p>
                     </div>
 
