--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 text-align: center;
                 font-size: 2em;
                 font-family: var(--font-gewalt);
-                margin-top: 60px;
+                margin-top: 0;
                 margin-bottom: 0;
                 letter-spacing: 1px;
                 font-weight: 700;
@@ -262,8 +262,11 @@
                     </li>
                 </ul>
 
+                <p>そう、これからの我々のテーゼはこうだ。</p>
                 <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
-                <p>ーギー・ドゥボールの革命スローガンの転用</p>
+                <p>
+                    ギー・ドゥボールの言葉「アーティストの廃止こそ芸術の実現である」の転用
+                </p>
             </section>
 
             <footer>
