--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </p>
                 </div>
 
-                <h2>3. 我々の目指すものと道筋</h2>
+                <h2>3. 我々が目指す事と道筋</h2>
                 <p>
                     我々は、技術を革命の手段にするのではなく、<strong
                         >技術そのものを革命する。</strong
