--- a/index.html
+++ b/index.html
@@ -118,27 +118,26 @@
                 flex-wrap: wrap;
                 gap: 20px;
                 margin-top: 20px;
-            }
 
-            .influence-item {
-                background-color: var(--color-border);
-                padding: 15px;
-                flex: 1 1 calc(33% - 20px);
-                min-width: 250px;
-                border-left: 2px solid var(--color-accent);
-                h3 {
-                    margin-top: 0;
-                    font-size: 1.2em;
-                    color: var(--color-accent);
-                    border-bottom: 1px dashed var(--color-border);
-                    padding-bottom: 5px;
-                }
-                p {
-                    line-height: 1.5;
-                    color: var(--color-text-secondary);
+                .influence-item {
+                    background-color: var(--color-border);
+                    padding: 15px;
+                    flex: 1 1 calc(33% - 20px);
+                    min-width: 250px;
+                    border-left: 2px solid var(--color-accent);
+                    h3 {
+                        margin-top: 0;
+                        font-size: 1.2em;
+                        color: var(--color-accent);
+                        border-bottom: 1px dashed var(--color-border);
+                        padding-bottom: 5px;
+                    }
+                    p {
+                        line-height: 1.5;
+                        color: var(--color-text-primary);
+                    }
                 }
             }
-
             .slogan {
                 text-shadow: black 3px 3px 0px;
                 background-color: var(--color-accent);
@@ -170,8 +169,8 @@
                     margin-top: 0;
                     font-size: 1.3em;
                 }
-
                 p {
+                    color: var(--color-text-secondary);
                     margin-bottom: 10px;
                 }
             }
