--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                     我々は、人間を管理可能な資源として強制的に配置する<strong>ゲシュテル</strong>（総駆り立て体制）から技術を解放し、人間の自由な生を存在論的に肯定する開蔵としての<strong>ポイエーシス</strong>へと転倒させることを目指す。
                 </p>
 
+                <p>
+                    前衛技術同盟の綱領(仮)は<a href="platform.html">こちら</a>
+                </p>
+
                 <h2>1. 影響を受けた思想と運動</h2>
                 <div class="influences">
                     <div class="influence-item">
