--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 </p>
 
                 <p>
-                    前衛技術同盟の綱領(仮)は<a href="platform.html">こちら</a>
+                    前衛技術同盟の綱領(仮)は
+                    <a href="platform.html">こちら</a> に全文があります。
                 </p>
 
                 <h2>1. 影響を受けた思想と運動</h2>
