--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="influence-item">
                         <h3>ハイデガー / 技術への問い</h3>
                         <p>
-                            ハイデガー自身は<strong>『技術への問い』</strong>を読む限り技術を論じる上で「ゲシュテルを打倒せよ」とは言ってないが、むしろ我々は意図的に「ゲシュテルを打倒せよ」と言って革命運動に転化させた左派ハイデガー主義者である。
+                            ハイデガー自身は<strong>『技術への問い』</strong>を読む限り技術を論じる上で「ゲシュテルを打倒せよ」とは言ってないが、むしろ我々は意図的に「ゲシュテルを打倒せよ」と言って革命運動に転化させたハイデガー左派である。
                         </p>
                     </div>
                 </div>
