--- a/index.html
+++ b/index.html
@@ -38,87 +38,18 @@
             </header>
 
             <section class="manifesto">
-                <p>
-                    <strong>技術は中立であり得ない。</strong
-                    >技術は単なる道具ではなく、我々の<strong>存在そのものの媒体</strong>であり、その在り方を強く規定する。出勤管理やタイムカードの規律権力を見よ。技術は常に、既存の権力関係を再生産する。
-                </p>
-                <p>
-                    我々は、人間を管理可能な資源として強制的に配置する<strong>ゲシュテル</strong>（総駆り立て体制）から技術を解放し、人間の自由な生を存在論的に肯定する開蔵としての<strong>ポイエーシス</strong>へと転倒させることを目指す。
-                </p>
+                <img src="images/Adolfgates.jpg" />
 
                 <p>
                     前衛技術同盟の綱領(仮)は
                     <a href="platform.html">こちら</a> に全文があります。
                 </p>
 
-                <h2>1. 影響を受けた思想と運動</h2>
-                <div class="influences">
-                    <div class="influence-item">
-                        <h3>ヘーゲル左派 / 疎外論</h3>
-                        <p>
-                            フォイエルバッハの疎外論の適用。<strong>人間が作ったはずの技術が人間を支配する</strong>、という疎外形態を告発する。
-                            キリスト教と類似した構造が見られる。
-                        </p>
-                    </div>
-
-                    <div class="influence-item">
-                        <h3>シチュアシオニスト</h3>
-                        <p>
-                            スペクタクル社会への批判。商品資本主義のSNSやメディアが織りなすスペクタクルを打破し、アナキスト的存在様式として技術の<strong>状況の構築</strong>を目指す。
-                        </p>
-                    </div>
-                    <div class="influence-item">
-                        <h3>ハイデガー / 技術への問い</h3>
-                        <p>
-                            ハイデガー自身は<strong>『技術への問い』</strong>を読む限り技術を論じる上で「ゲシュテルを打倒せよ」とは言ってないが、むしろ我々は意図的に「ゲシュテルを打倒せよ」と言って革命運動に転化させたハイデガー左派である。
-                        </p>
-                    </div>
-                </div>
-
-                <h2>2. 既存の技術運動への批判</h2>
-                <div class="critique-section">
-                    <h3>自由ソフトウェア / オープンソースへの批判</h3>
-                    <p>
-                        資本主義を打倒するのではなく、補完的な技術愛好文化に留まっており、スペクタクル商品社会に回収されている。しかし、ハッカー精神や自由と協働を重んじるコミュニティ文化は尊敬する。
-                    </p>
-                </div>
-                <div class="critique-section">
-                    <h3>暗号アナキズム / 加速主義への批判</h3>
-                    <p>
-                        右派的・市場原理主義的であり、存在論的な分析を持たず、技術を単に革命の武器としてしか見ていない。ただし、その匿名性は近代的主体そのものを脱構築する可能性を持つ点を評価する。
-                    </p>
-                </div>
-
-                <h2>3. 我々が目指す事と道筋</h2>
-                <p>
-                    我々は、技術を革命の手段にするのではなく、<strong
-                        >技術そのものを革命する。</strong
-                    >
-                </p>
-
-                <ul>
-                    <li>
-                        <strong>疎外克服：</strong
-                        >労務管理ソフト、デジタル教育、検閲やフィルタリングなど、自由の敵たるゲシュテルを粉砕する。
-                    </li>
-                    <li>
-                        <strong>代替システム：</strong
-                        >分散型SNSやプログラミング言語など、アナキスト社会の基盤になるソフトウェアを開発する。
-                    </li>
-                    <li>
-                        <strong>技術の非職能化：</strong
-                        >技術独占とテクノクラシーを克服するため、技術を遊戯化し日常生活との一体化を推進する。
-                    </li>
-                </ul>
-
-                <p>そう、これからの我々のテーゼはこうだ。</p>
                 <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
                 <p>
                     ギー・ドゥボールの言葉「アーティストの廃止こそ芸術の実現である」の転用
                 </p>
             </section>
-
-            <md-article src="readme.md"></md-article>
 
             <footer>
                 <p>
