--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         <div class="container">
             <header>
                 <h1>前衛技術同盟</h1>
-                <p class="subtitle">BUND DER AVANTGARDE-TECHNOLOGEN</p>
+                <p class="subtitle">Bund der Avantgarde-Technologen</p>
             </header>
+
+            <p>
+                前衛技術同盟の綱領は
+                <a href="platform.html">こちら</a> にあります。<br />
+            </p>
 
             <section class="manifesto">
                 <img src="images/Adolfgates.jpg" />
-
-                <p>
-                    前衛技術同盟の綱領(仮)は
-                    <a href="platform.html">こちら</a> に全文があります。
-                </p>
 
                 <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
                 <p>
