--- a/index.html
+++ b/index.html
@@ -34,22 +34,11 @@
         <div class="container">
             <header>
                 <h1>前衛技術同盟</h1>
-                <p class="subtitle">Bund der Avantgarde-Technologen</p>
             </header>
+            <img src="images/Adolfgates.jpg" />
 
-            <p>
-                前衛技術同盟の綱領は
-                <a href="platform.html">こちら</a> にあります。<br />
-            </p>
-
-            <section class="manifesto">
-                <img src="images/Adolfgates.jpg" />
-
-                <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
-                <p>
-                    ギー・ドゥボールの言葉「アーティストの廃止こそ芸術の実現である」の転用
-                </p>
-            </section>
+            <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
+            <p>綱領は <a href="platform.html">こちら</a> にあります。</p>
 
             <footer>
                 <p>
