--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <meta property="og:title" content="前衛技術同盟" />
-        <meta property="og:image" content="./images/Adolfgates.jpg" />
         <meta property="og:url" content="https://avant-garde-tech.github.io/" />
         <meta property="og:type" content="website" />
+        <meta
+            property="og:image"
+            content="https://avant-garde-tech.github.io/images/Adolfgates.jpg"
+        />
         <meta
             property="og:description"
             content="エンジニアの廃止こそ技術の実現である"
@@ -15,7 +18,10 @@
 
         <meta name="twitter:title" content="前衛技術同盟" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:image" content="./images/Adolfgates.jpg" />
+        <meta
+            name="twitter:image"
+            content="https://avant-garde-tech.github.io/images/Adolfgates.jpg"
+        />
         <meta
             name="twitter:description"
             content="エンジニアの廃止こそ技術の実現である"
