--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <img src="images/Adolfgates.jpg" />
 
             <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
-            <p>綱領は <a href="platform.html">こちら</a> にあります。</p>
+            <p>
+                <a href="platform.html">綱領</a>
+                <a href="前技同ビラ.pdf">ビラ</a>
+            </p>
 
             <footer>
                 <p>
