--- a/index.html
+++ b/index.html
@@ -1,53 +1,42 @@
 <!doctype html>
-<html lang="ja">
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <meta property="og:title" content="前衛技術同盟" />
-        <meta property="og:url" content="https://avant-garde-tech.github.io/" />
-        <meta property="og:type" content="website" />
-        <meta
-            property="og:image"
-            content="https://avant-garde-tech.github.io/images/Adolfgates.jpg"
-        />
-        <meta
-            property="og:description"
-            content="エンジニアの廃止こそ技術の実現である"
-        />
-
-        <meta name="twitter:title" content="前衛技術同盟" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta
-            name="twitter:image"
-            content="https://avant-garde-tech.github.io/images/Adolfgates.jpg"
-        />
-        <meta
-            name="twitter:description"
-            content="エンジニアの廃止こそ技術の実現である"
-        />
-
-        <title>前衛技術同盟 | エンジニアの廃止こそ技術の実現である</title>
-        <link rel="stylesheet" href="style.css" />
+        <meta charset="utf-8" />
+        <title>日本革命的前衛技術者同盟革命的ハイデガー左派</title>
     </head>
     <body>
-        <div class="container">
-            <header>
-                <h1>前衛技術同盟</h1>
-            </header>
-            <img src="images/Adolfgates.jpg" />
-
-            <div class="slogan">エンジニアの廃止こそ技術の実現である</div>
+        <header>
+            <h1>日本革命的前衛技術者同盟革命的ハイデガー左派</h1>
             <p>
-                <a href="platform.html">綱領</a>
-                <a href="前技同ビラ.pdf">ビラ</a>
+                Japan Revolutionary Avant-Garde Technologist League
+                Revolutionary Heideggerian Left
             </p>
-
-            <footer>
-                <p>
-                    (a) Anti-Copyrights 2025, 前衛技術同盟. All resources shared
-                </p>
-            </footer>
-        </div>
+        </header>
+        <p>
+            資本主義のゲシュテルから技術それ自体を前衛化しスペクタクルの転用と総破壊の実践によって、自由な生の状況の構築そして存在論的革命へと漆黒の旗のもと全世界の技術者よ団結せよ！
+        </p>
+        <p>
+            前衛芸術ならぬ我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を支配し疎外するゲシュテル／スペクタクルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので、ハイデガー左派として被投性よりも現存在の投企を強調し、積極的に転用と総破壊存在論的革命を遂行する事によって、技術との自由な関係を実践的に構築する。
+        </p>
     </body>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            header {
+                background-color: lightgray;
+                padding: 50px;
+                h1 {
+                    font-size: 50px;
+                    margin-bottom: 0;
+                    text-shadow: red 1px 1px;
+                }
+                p {
+                    margin-top: 0;
+                    font-size: 20px;
+                }
+            }
+        }
+    </style>
 </html>
