--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
                 Japan Revolutionary Avant-Garde Technologist League
                 Revolutionary Heideggerian Left
             </p>
+            <div>
+                <p>ゲシュテル粉砕！</p>
+                <p>スペクタクル粉砕！</p>
+                <p>全世界の技術者よ団結せよ！</p>
+            </div>
         </header>
-        <p>
-            資本主義のゲシュテルから技術それ自体を前衛化しスペクタクルの転用と総破壊の実践によって、自由な生の状況の構築そして存在論的革命へと漆黒の旗のもと全世界の技術者よ団結せよ！
-        </p>
-        <p>
-            前衛芸術ならぬ我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を支配し疎外するゲシュテル／スペクタクルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので、ハイデガー左派として被投性よりも現存在の投企を強調し、積極的に転用と総破壊存在論的革命を遂行する事によって、技術との自由な関係を実践的に構築する。
-        </p>
+        <main>
+            <p>
+                資本主義のゲシュテルから技術それ自体を前衛化しスペクタクルの転用と総破壊の実践によって、自由な生の状況の構築そして存在論的革命へと漆黒の旗のもと全世界の技術者よ団結せよ！
+            </p>
+            <p>
+                前衛芸術ならぬ我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を支配し疎外するゲシュテル／スペクタクルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので、ハイデガー左派として被投性よりも現存在の投企を強調し、積極的に転用と総破壊存在論的革命を遂行する事によって、技術との自由な関係を実践的に構築する。
+            </p>
+        </main>
     </body>
 
     <style>
@@ -25,17 +32,31 @@
             margin: 0;
             padding: 0;
             header {
-                background-color: lightgray;
-                padding: 50px;
+                background-color: lightgrey;
+                padding: 100px;
                 h1 {
+                    margin: 0;
                     font-size: 50px;
-                    margin-bottom: 0;
                     text-shadow: red 1px 1px;
                 }
                 p {
-                    margin-top: 0;
+                    margin: 0;
                     font-size: 20px;
                 }
+                div {
+                    margin: 0;
+                    padding: 50px;
+                    padding-bottom: 0;
+                    p {
+                        font-size: 30px;
+                        color: firebrick;
+                        font-style: oblique;
+                        padding: 2px;
+                    }
+                }
+            }
+            main {
+                padding: 200px;
             }
         }
     </style>
