--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             }
             main {
                 padding: 200px;
+                p {
+                    font-size: 18px;
+                }
             }
         }
     </style>
