--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <p>
                 前衛芸術ならぬ我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を支配し疎外するゲシュテル／スペクタクルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なのでハイデガー左派として被投性よりも現存在の投企を強調し、転用と総破壊による「状況の構築」そして存在論的革命を遂行する事によって技術との自由な関係を構築する。
             </p>
+            <h2>技術実装</h2>
+            <p>Make C more easy to code! the low-layer programming language</p>
+            <a href="https://github.com/archy-none/rem">GitHubリポジトリ</a>
         </main>
     </body>
 
@@ -34,7 +37,7 @@
                 h1 {
                     margin: 0;
                     font-size: 50px;
-                    text-shadow: red 1px 1px;
+                    text-shadow: firebrick 1px 1px;
                 }
                 p {
                     margin: 0;
@@ -56,6 +59,13 @@
                 padding: 200px;
                 p {
                     font-size: 18px;
+                }
+                a {
+                    color: crimson;
+                    text-decoration: none;
+                    &:hover {
+                        text-decoration: underline;
+                    }
                 }
             }
         }
