--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
             <p>
                 前衛芸術ならぬ我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を支配し疎外するゲシュテル／スペクタクルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なのでハイデガー左派として被投性よりも現存在の投企を強調し、転用と総破壊による「状況の構築」そして存在論的革命を遂行する事によって技術との自由な関係を構築する。
             </p>
-            <h2>我が同盟が実装した自由な技術</h2>
+            <h2>我が同盟が実装した前衛技術作品</h2>
             <p>
-                <a href="https://github.com/archy-none/rem">Rem</a>
-                Make C more easy to code! the low-layer programming language
+                <a href="https://github.com/archy-none/rem">Rem</a
+                >（コンパイラ） Make C more easy to code! the low-layer
+                programming language
+            </p>
+            <h3>極左的ライセンス</h3>
+            <p>
+                <a href="./LICENSE.txt">前衛技術</a>
             </p>
         </main>
     </body>
