--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
             <h3>極左的ライセンス</h3>
             <p>
-                全ての前衛技術のソフトウェアは弁護士泣かせの
+                全ての前衛技術ソフトウェアは弁護士泣かせの
                 <a href="./LICENSE.txt">前衛技術ライセンス</a>
                 によって配布されています。
             </p>
