--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
                 >（コンパイラ） Make C more easy to code! the low-layer
                 programming language
             </p>
-            <h3>極左的ライセンス</h3>
+            <h3>法的転用(détournement)</h3>
             <p>
                 全ての前衛技術ソフトウェアは弁護士泣かせの
                 <a href="./LICENSE.txt">前衛技術ライセンス</a>
                 によって配布されています。
             </p>
+            <hr size="1" />
+            <marquee>
+                アナキスト独裁による総破壊！！　黒色テロルで自由の敵を大虐殺！！　日本政府はテロに屈しろ！！！　世界革命戦争万歳！！！　
+            </marquee>
         </main>
     </body>
 
@@ -64,7 +68,9 @@
                 }
             }
             main {
-                padding: 200px;
+                padding: 100px;
+                padding-left: 200px;
+                padding-right: 200px;
                 p {
                     font-size: 18px;
                 }
@@ -74,6 +80,13 @@
                     &:hover {
                         text-decoration: underline;
                     }
+                }
+                hr {
+                    margin-top: 50px;
+                    margin-bottom: 50px;
+                }
+                marquee {
+                    behavior: slide;
                 }
             }
         }
