--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>我が同盟が実装した前衛技術</h2>
             <p>
                 <a href="https://github.com/archy-none/rem">Rem</a
-                >（コンパイラ） Make C more easy to code! the low-layer
+                >（C言語互換コンパイラ） Make C more easy to code! the low-layer
                 programming language
             </p>
             <h3>法的転用(détournement)</h3>
