--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             </p>
             <h2>我が同盟が実装した前衛技術</h2>
             <p>
-                <a href="https://github.com/archy-none/rem">Rem</a
-                >（C言語互換コンパイラ） Make C more easy to code! the low-layer
-                programming language
+                <a href="https://github.com/archy-none/rem">Rem</a>
+                （コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
             </p>
             <h3>法的転用(détournement)</h3>
             <p>
