--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             </p>
             <h2>我が同盟が実装した前衛技術</h2>
             <p>
+                世界に対峙して自己を定立するために技術との自由な関わりを実践する
+            </p>
+            <p>
                 <a href="https://github.com/archy-none/rem">Rem</a>
                 （コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
             </p>
