--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 世界に対峙して自己を定立するために技術との自由な関わりを実践する
             </p>
             <p>
-                <a href="https://github.com/archy-none/rem">Rem</a>
-                （コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
+                ・<a href="https://github.com/archy-none/rem">Rem</a>
+                （傑作コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
             </p>
             <h3>法的転用(détournement)</h3>
             <p>
