--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             </p>
             <hr size="1" />
             <marquee>
-                アナキスト独裁による総破壊！！　黒色テロルで自由の敵を大虐殺！！　日本政府はテロに屈しろ！！！　世界革命戦争万歳！！！　
+                <p>アナキスト独裁による総破壊！！</p>
+                <p>黒色テロルで自由の敵を大虐殺！！</p>
+                <p>日本政府はテロに屈しろ！！！</p>
+                <p>世界革命戦争万歳！！！　</p>
             </marquee>
         </main>
     </body>
