--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </p>
             <hr size="1" />
             <marquee>
-                <p>アナキスト独裁による総破壊！！</p>
-                <p>黒色テロルで自由の敵を大虐殺！！</p>
-                <p>日本政府はテロに屈しろ！！！</p>
-                <p>世界革命戦争万歳！！！　</p>
+                <span>アナキスト独裁による総破壊！！</span>
+                <span>黒色テロルで自由の敵を大虐殺！！</span>
+                <span>日本政府はテロに屈しろ！！！</span>
+                <span>世界革命戦争万歳！！！　</span>
             </marquee>
         </main>
     </body>
