--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     </body>
 
     <style>
+        @import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
         body {
+            font-family: "M PLUS 1p", sans-serif;
             margin: 0;
             padding: 0;
             header {
