--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <p>
-                前衛芸術ならぬ我が<strong>前衛技術</strong>は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を駆り立て支配し疎外するゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので<strong>ハイデガー左派</strong>として被投性よりも現存在の投企を強調し、スペクタクルの転用と総破壊による<strong>状況の構築</strong>そして存在論的革命を遂行して技術との自由な関係を構築する。
+                前衛芸術ならぬ我が<strong>前衛技術</strong>は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を在庫として駆り立てるゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので<strong>ハイデガー左派</strong>として被投性よりも現存在の投企を強調し、スペクタクルの転用と総破壊による<strong>状況の構築</strong>そして存在論的革命を遂行して技術との自由な関係を構築する。
             </p>
             <h2>我が同盟が実装した前衛技術</h2>
             <p>
