--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 前衛芸術ならぬ我が<strong>前衛技術</strong>は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を在庫として駆り立てるゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので<strong>ハイデガー左派</strong>として被投性よりも現存在の投企を強調し、スペクタクルの転用と総破壊による<strong>状況の構築</strong>そして存在論的革命を遂行することによって技術との自由な関係を構築する。
             </p>
             <h2>我が同盟が実装した前衛技術</h2>
-            <p>
-                世界に対峙して自己を定立するために技術との自由な関わりを実践する
-            </p>
+            <p>世界に対峙して自己を定立するため機械の本来的な開発を実践する</p>
             <p>
                 ・<a href="https://github.com/archy-none/rem">Rem</a>
                 （傑作コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
