--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </p>
             <p>エンジニアの廃止こそ技術の実現である。</p>
             <h2>我が同盟が実装した前衛技術</h2>
-            <p>世界に対峙して自己を定立するため機械の本来的な開発を実践する</p>
-            <p>プログラミングは革命実践だ！</p>
+            <p>世界に対峙して自己を定立するため機械の本来的な開発を試行する</p>
+            <p>革命的に方向付ければプログラミングも革命実践だ！</p>
             <p>
                 ・<a href="https://github.com/archy-none/rem">Rem</a>
                 （傑作コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
