--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>革命的に方向付ければプログラミングも革命実践だ！</p>
             <p>
                 ・<a href="https://github.com/archy-none/rem">Rem</a>
-                （傑作コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
+                （互換コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
             </p>
             <h3>法的転用(détournement)</h3>
             <p>
