--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
             <h2>我が同盟が実装した前衛技術</h2>
             <p>世界に対峙して自己を定立するため機械の本来的な開発を試行する</p>
             <p>革命的に方向付ければプログラミングも革命実践だ！</p>
-            <p>
-                ・<a href="https://github.com/archy-none/rem">Rem</a>
-                （互換コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
-            </p>
+            <ul>
+                <li>
+                    <p>
+                        <a href="https://github.com/archy-none/rem">Rem</a>
+                        （互換コンパイラ）C言語をもっと書きやすく！低レイヤーなプログラミング言語
+                    </p>
+                </li>
+            </ul>
             <h3>法的転用(détournement)</h3>
             <p>
                 全ての前衛技術ソフトウェアは弁護士泣かせの
