--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </p>
             <p>エンジニアの廃止こそ技術の実現である。</p>
             <h2>我が同盟が実装した前衛技術</h2>
-            <p>世界に対峙して自己を定立するため機械の本来的な開発を試行する</p>
+            <p>
+                世界に対峙して自己を定立するため機械の本来的な開発を試行する。
+            </p>
             <p>革命的に方向付ければプログラミングも革命実践だ！</p>
             <ul>
                 <li>
