--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <p>
-                前衛芸術ならぬ我が<strong>前衛技術</strong>は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、人々を在庫として駆り立てるゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので<strong>ハイデガー左派</strong>として被投性よりも現存在の投企を強調し、スペクタクルの転用と総破壊による<strong>状況の構築</strong>そして存在論的革命を遂行することで技術との自由な関係を準備する。
+                前衛芸術ならぬ我が<strong>前衛技術</strong>は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、支配と疎外の元凶は人々を在庫として駆り立てるゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なので<strong>ハイデガー左派</strong>として被投性よりも現存在の投企を強調し、スペクタクルの転用と総破壊による状況の構築、そして存在論的革命を遂行し、技術との自由な関係を準備する。
             </p>
             <p>
                 暗号無政府主義や加速主義は、存在忘却であり我々の敵である。我々は技術を革命の手段にするのではなく、技術それ自体を革命の対象にする。
