--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
             <p>エンジニアの廃止こそ技術の実現である。</p>
             <h2>我が同盟が実装した前衛技術</h2>
-            <p>世界に対峙して自己を定立するため本来的な技術を開発する。</p>
+            <p>世界に対峙して自己を定立する為に本来的な技術を開発する。</p>
             <p>革命的に方向付ければプログラミングも革命実践だ！</p>
             <ul>
                 <li>
@@ -42,12 +42,14 @@
                 <a href="./LICENSE.txt">前衛技術ライセンス</a>
                 によって配布されています。
             </p>
+            <h2>入党するには</h2>
+            <p>大人しくオルグされるのを待ちましょう。</p>
             <hr size="1" />
-            <marquee>
+            <marquee scrollamount="15">
                 <span>アナキスト独裁による総破壊！！</span>
                 <span>黒色テロルで自由の敵を大虐殺！！</span>
                 <span>日本政府はテロに屈しろ！！</span>
-                <span>世界革命戦争万歳！！！　</span>
+                <span>世界革命戦争万歳！！！</span>
                 <span>ファシズム万歳！！！</span>
             </marquee>
         </main>
@@ -101,7 +103,7 @@
                     margin-bottom: 50px;
                 }
                 marquee {
-                    color: lightgrey;
+                    color: grey;
                     letter-spacing: 10px;
                     font-size: 30px;
                     behavior: slide;
