--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </header>
         <main>
             <p>
-                前衛芸術に準えうる我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、支配と疎外の元凶は人々を在庫として駆り立てるゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なのでハイデガー左派として被投性よりも現存在の投企を強調し、体制の屋台骨に過ぎなかった技術を我々の側に奪取し前衛化し、スペクタクルの転用と総破壊による”状況の構築”そして存在論的革命へと進撃し、技術との自由な関係を構築する。
+                前衛芸術に準えうる我が前衛技術は、ハイデガーの『技術への問い』とシチュアシオニストを参照点に、リベラルな技術倫理の中立性神話を暴いて技術の権力性を露呈させ、支配と疎外の元凶は人々を在庫として駆り立てるゲシュテルだと現代の情報資本主義に対して根源的な批判を展開するが、危機に際して原典のように放下するのでは余りにも政治的に無力なのでハイデガー左派として被投性よりも現存在の投企を強調し、体制の屋台骨に過ぎなかった技術を我々の側に奪取し前衛化し、スペクタクルの転用と総破壊による”状況の構築”そして存在論的革命へと進撃し、現存在と技術との自由な関係を構築する。
             </p>
             <p>
-                暗号無政府主義や加速主義は、存在忘却であり我々の敵である。我々は技術を革命の手段にするのではなく、技術それ自体を革命の対象にする。
+                暗号無政府主義や加速主義は、存在忘却の反革命であり我々の敵である。我々は技術を革命の手段にするのでは無く、技術それ自体を革命の対象にする。
             </p>
-            <p>エンジニアの廃止こそ技術の実現である。</p>
+            <p>”エンジニアの廃止こそ技術の実現である”ー秋井行人</p>
             <h2>我が同盟が実装した前衛技術</h2>
             <p>世界に対峙して自己を定立する為に本来的な技術を開発する。</p>
             <p>革命的に方向付ければプログラミングも革命実践だ！</p>
